# python-package

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CNAME  Dockerfile  MANIFEST.in  README.rst  action.yml  cookiecutter.json  mkdocs.yml  pyproject.toml  readme.md  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docs.yml  docker.yml  publish.yml  tests.yml  {{package-name}}.yml
docs/: CHANGELOG.md  CNAME  CONTRIBUTING.md  changelog.md  contributing.md  index.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  pre-commit.yml  pypi.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  index.md  installation.md
{{cookiecutter.project_slug}}/docs/overrides/: main.html
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_slug}}/: __init__.py  logger.py
