[metadata]
name = {{project-name}}
version = attr: {{project-name}}.__version__
url = https://{{project-name}}.hakancelik.dev/
author = Hakan Çelik
author_email = contact@hakancelik.dev
description =
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://{{project-name}}.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/{{project-name}}/issues/
    Changelog = https://{{project-name}}.hakancelik.dev/changelog

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =

[options.extras_require]
tests = pytest; pytest-cov; packaging
docs = mkdocs==1.3.0; mkdocs-markdownextradata-plugin==0.2.5; mkdocs-minify-plugin==0.5.0; mkdocs-git-revision-date-localized-plugin==1.0.1

[flake8]
exclude = build,.git,.tox,./tests/venv
extend-ignore = E203

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 79