[metadata]
name = {{project-name}}
version = attr: {{project-name}}.__version__
url = https://{{project-name}}.hakancelik.dev/
author = Hakan Çelik
author_email = contact@hakancelik.dev
description = attr: {{project-name}}.__description__
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
keywords = 
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://{{project-name}}.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/{{project-name}}/issues/
    Changelog = https://{{project-name}}.hakancelik.dev/changelog

[options]
python_requires = >=3.8
include_package_data = true
zip_safe = true
packages =
    {{mypkg}}
    {{mypkg_subpkg}}
package_dir =
    =src
install_requires =
    {{install_requires}}

[options.extras_require]
tests =
    pytest==6.2.4
    pytest-cov==2.12.1
docs =
    mkdocs==1.3.0
    mkdocs-material==8.3.6
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.5.0
    mkdocs-git-revision-date-localized-plugin==1.0.1

[options.entry_points]
console_scripts =
    {{project-name}} = {{project-name}}.__main__:main

[options.package_data]
* =
  py.typed
