{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = {{ cookiecutter.project_name_url }}
version = {{ cookiecutter.version }}
url = https://{{ cookiecutter.project_name_url }}.hakancelik.dev/
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = attr: {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = {{ cookiecutter.project_slug }}
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    {%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
    {%- endif %}
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://{{ cookiecutter.project_name_url }}.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/{{ cookiecutter.project_name_url }}/issues/
    Changelog = https://{{ cookiecutter.project_name_url }}.hakancelik.dev/changelog

[options]
python_requires = >=3.10
include_package_data = true
zip_safe = true
packages =
    {{ cookiecutter.project_name_url }}
package_dir =
    =src
install_requires =


[options.extras_require]
tests =
    pytest
    pytest-cov
docs =
    mkdocs==1.4.2
    mkdocs-material==9.1.6
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.6.4
    mkdocs-git-revision-date-localized-plugin==1.2.0
    mike==1.1.2

[options.package_data]
* =
  py.typed
