{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = {{ cookiecutter.package_slug }}
version = {{ cookiecutter.version }}
url = https://{{ cookiecutter.project_slug }}.hakancelik.dev/
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = attr: {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = {{ cookiecutter.package_slug }}
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    {%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
    {%- endif %}
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://{{ cookiecutter.project_slug }}.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/{{ cookiecutter.project_slug }}/issues/
    Changelog = https://{{ cookiecutter.project_slug }}.hakancelik.dev/changelog

[options]
python_requires = >=3.10
include_package_data = true
zip_safe = true
packages =
    {{ cookiecutter.package_slug }}
package_dir =
    =src
install_requires =


[options.extras_require]
tests =
    pytest
    pytest-cov
docs =
    mkdocs
    mkdocs-material
    mkdocs-markdownextradata-plugin
    mkdocs-minify-plugin
    mkdocs-git-revision-date-localized-plugin
    mike

[options.package_data]
* =
  py.typed
